Refactor `updateUser` in `UserService` to introduce reusable field update methods for improved maintainability and reduced code duplication.